--- a/workoutplan.html
+++ b/workoutplan.html
@@ -17,7 +17,7 @@
         <div class="container-fluid">
             <div class="row w-100 align-items-center">
                 <div class="col-lg-3 col-md-4 col-6">
-                    <img src="Img/Logo.png" width="80px" height="60px" href="index.html" alt="Logo">
+                    <img src="Logo.png" width="80px" height="60px" href="index.html" alt="Logo">
                 </div>
                 <div class="col-lg-9 col-md-8 d-flex justify-content-end align-items-center">
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -52,10 +52,10 @@
                 <div class="col-md-4 d-flex flex-column align-items-center">
                     <div class="plan-card">
                         <h3>PLAN A</h3>
-                        <img src="Img/plan1.png" alt="Plan A">
+                        <img src="plan1.png" alt="Plan A">
                     </div>
                     <a href="plan-detail1.html" class="custom-icon-btn">
-                        <img src="Img/jumpicon.png" alt="Jump Rope" class="icon" height="40px" width="40px">
+                        <img src="jumpicon.png" alt="Jump Rope" class="icon" height="40px" width="40px">
 
                     </a>
                 </div>
@@ -63,7 +63,7 @@
                 <div class="col-md-4 d-flex flex-column align-items-center">
                     <div class="plan-card">
                         <h3>PLAN B</h3>
-                        <img src="Img/plan2.png" alt="Plan B">
+                        <img src="plan2.png" alt="Plan B">
                     </div>
                     <a href="plan-detail2.html" class="custom-icon-btn">
                         <i class="fa-solid fa-dumbbell"></i>
@@ -73,7 +73,7 @@
                 <div class="col-md-4 d-flex flex-column align-items-center">
                     <div class="plan-card">
                         <h3>PLAN C</h3>
-                        <img src="Img/plan3.png" alt="Plan C">
+                        <img src="plan3.png" alt="Plan C">
                     </div>
                     <a href="plan-detail3.html" class="custom-icon-btn">
                         <i class="fa-solid fa-person-running"></i>
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4 text-center text-md-start mb-4 mb-md-0">
-                    <img src="Img/Logo.png" width="180" alt="Footer Logo">
+                    <img src="Logo.png" width="180" alt="Footer Logo">
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                     <div class="d-flex flex-column gap-3">
@@ -112,5 +112,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
