--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <div class="row w-100 align-items-center">
                 <div class="col-lg-3 col-md-4 col-6">
-                    <img src="Img/Logo.png" width="80px" height="60px" href="index.html" alt="Logo" >
+                    <img src="Logo.png" width="80px" height="60px" href="index.html" alt="Logo" >
                 </div>
                 <div class="col-lg-9 col-md-8 d-flex justify-content-end align-items-center">
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
@@ -52,7 +52,7 @@
             <div class="row row-cols-1 row-cols-md-3 g-4 text-start">
                 <div class="col">
                     <a href="service-detail1.html" class="workout-card-link">
-                        <img src="Img/9.png" class="img-fluid rounded-4 mb-3 shadow-sm hover-zoom">
+                        <img src="9.png" class="img-fluid rounded-4 mb-3 shadow-sm hover-zoom">
                         <h3>INDOOR CYCLING</h3>
                     </a>
                     <p class="benefit">
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col">
                     <a href="service-detail2.html" class="workout-card-link">
-                        <img src="Img/10.png" class="img-fluid rounded-4 mb-3 shadow-sm hover-zoom">
+                        <img src="10.png" class="img-fluid rounded-4 mb-3 shadow-sm hover-zoom">
                         <h3>TRAMPOLINE</h3>
                     </a>
                     <p class="benefit">
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col">
                     <a href="service-detail3.html" class="workout-card-link">
-                        <img src="Img/11.png" class="img-fluid rounded-4 mb-3 shadow-sm hover-zoom">
+                        <img src="11.png" class="img-fluid rounded-4 mb-3 shadow-sm hover-zoom">
                         <h3>CROSS FIT</h3>
                     </a>
                     <p class="benefit">
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4 text-center text-md-start mb-4 mb-md-0">
-                    <img src="Img/Logo.png" width="180" alt="Footer Logo">
+                    <img src="Logo.png" width="180" alt="Footer Logo">
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                     <div class="d-flex flex-column gap-3">
@@ -115,5 +115,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
