--- a/service-detail3.html
+++ b/service-detail3.html
@@ -19,7 +19,7 @@
             <div class="row w-100 align-items-center">
                 <div class="col-lg-3 col-md-4 col-6 order-1">
                     <a href="index.html">
-                    <img src="Img/Logo.png" width="80px" height="60px" alt="Logo">
+                    <img src="Logo.png" width="80px" height="60px" alt="Logo">
                     </a>
                 </div>
                 <div class="col-lg-9 col-md-8 order-3 order-md-2 d-flex justify-content-end align-items-center">
@@ -56,7 +56,7 @@
 
                 <div class="col-lg-5">
                     <div class="detail-blue-card">
-                        <img src="Img/11.png" class="img-fluid rounded-4 shadow-lg" alt="Indoor Cycling" href="index.html">
+                        <img src="11.png" class="img-fluid rounded-4 shadow-lg" alt="Indoor Cycling" href="index.html">
                     </div>
                 </div>
 
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 col-md-12 text-center text-lg-start mb-4 mb-lg-0">
-                    <img src="Img/Logo.png" width="250px" alt="Footer Logo">
+                    <img src="Logo.png" width="250px" alt="Footer Logo">
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
@@ -135,5 +135,6 @@
         }
     </script>
 </body>
+
 
 </html>
