--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
             <div class="row w-100 align-items-center">
                 <div class="col-lg-3 col-md-4 col-6 order-1">
-                    <img src="Img/Logo.png" width="80px" height="60px" alt="Logo">
+                    <img src="Logo.png" width="80px" height="60px" alt="Logo">
                 </div>
                 <div class="col-lg-9 col-md-8 order-3 order-md-2 d-flex justify-content-end align-items-center">
                     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar">
@@ -53,7 +53,7 @@
             <div class="row g-5 mt-4">
                 <div class="col-lg-5 d-flex flex-column gap-4">
                     <div class="profile-image-wrapper">
-                        <img src="Img/profilepic.jpeg" alt="Profile">
+                        <img src="profilepic.jpeg" alt="Profile">
                     </div>
                 </div>
 
@@ -69,11 +69,11 @@
                         <h3>ACTIVITIES PARTICIPATED IN</h3>
                         <div class="activity-grid">
                             <a href="service.html" class="activity-box">
-                                <img src="Img/10.png">
+                                <img src="10.png">
                             </a>
 
                             <a href="service.html" class="activity-box">
-                                <img src="Img/11.png">
+                                <img src="11.png">
                             </a>
 
                             <div class="activity-box empty"></div>
@@ -129,5 +129,6 @@
         }
     </script>
 </body>
+
 
 </html>
