--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
                 <div class="row w-100 align-items-center">
                     <div class="col-lg-3 col-md-4 col-6 order-1">
                         <a href="index.html">
-                            <img src="Img/Logo.png" width="80px" height="60px" alt="Logo">
+                            <img src="Logo.png" width="80px" height="60px" alt="Logo">
                         </a>
                     </div>
                     <div class="col-lg-9 col-md-8 order-3 order-md-2 d-flex justify-content-end align-items-center">
@@ -64,7 +64,7 @@
                 <div class="col-lg-4 col-md-6">
                     <a href="pd1.html" class="product-link">
                         <div class="product-card">
-                            <img src="Img/pd1.png" class="product-img" alt="Whey Protein">
+                            <img src="pd1.png" class="product-img" alt="Whey Protein">
                             <h4>WHEY PROTEIN</h4>
                             <p>
                                 -Supports muscle growth and repair.<br>
@@ -79,7 +79,7 @@
                 <div class="col-lg-4 col-md-6">
                     <a href="pd2.html" class="product-link">
                         <div class="product-card">
-                            <img src="Img/pd2.png" class="product-img" alt="Creatine">
+                            <img src="pd2.png" class="product-img" alt="Creatine">
                             <h4>CREATINE</h4>
                             <p>
                                 -Increases muscle strength and power.<br>
@@ -94,7 +94,7 @@
                 <div class="col-lg-4 col-md-6">
                     <a href="pd3.html" class="product-link">
                         <div class="product-card">
-                            <img src="Img/pd3.png" class="product-img" alt="BCAA">
+                            <img src="pd3.png" class="product-img" alt="BCAA">
                             <h4>BCAA</h4>
                             <p>
                                 -Reduces muscle breakdown.<br>
@@ -109,7 +109,7 @@
                 <div class="col-lg-4 col-md-6">
                     <a href="pd4.html" class="product-link">
                         <div class="product-card">
-                            <img src="Img/pd4.png" class="product-img" alt="Pre Workout">
+                            <img src="pd4.png" class="product-img" alt="Pre Workout">
                             <h4>PRE-WORKOUT</h4>
                             <p>
                                 -Boosts energy and focus.<br>
@@ -124,7 +124,7 @@
                 <div class="col-lg-4 col-md-6">
                     <a href="pd5.html" class="product-link">
                         <div class="product-card">
-                            <img src="Img/pd5.png" class="product-img" alt="Omega 3">
+                            <img src="pd5.png" class="product-img" alt="Omega 3">
                             <h4>OMEGA-3</h4>
                             <p>
                                 -Supports heart and brain health.<br>
@@ -139,7 +139,7 @@
                 <div class="col-lg-4 col-md-6">
                     <a href="pd6.html" class="product-link">
                         <div class="product-card">
-                            <img src="Img/pd6.png" class="product-img" alt="Electrolytes">
+                            <img src="pd6.png" class="product-img" alt="Electrolytes">
                             <h4>ELECTROLYTES</h4>
                             <p>
                                 -Maintains proper hydration.<br>
@@ -158,7 +158,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 col-md-12 text-center text-lg-start mb-4 mb-lg-0">
-                    <img src="Img/Logo.png" width="250px" alt="Footer Logo">
+                    <img src="Logo.png" width="250px" alt="Footer Logo">
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
@@ -186,5 +186,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 
 </html>
