--- a/pd6.html
+++ b/pd6.html
@@ -19,7 +19,7 @@
             <div class="row w-100 align-items-center">
                 <div class="col-lg-3 col-md-4 col-6 order-1">
                     <a href="index.html">
-                        <img src="Img/Logo.png" width="80px" height="60px" alt="Logo">
+                        <img src="Logo.png" width="80px" height="60px" alt="Logo">
                     </a>
                 </div>
                 <div class="col-lg-9 col-md-8 order-3 order-md-2 d-flex justify-content-end align-items-center">
@@ -61,7 +61,7 @@
 
                 <!-- LEFT IMAGE -->
                 <div class="col-md-5 text-center mb-4 mb-md-0">
-                    <img src="Img/pd6.png" class="product-img" alt="electrolytes">
+                    <img src="pd6.png" class="product-img" alt="electrolytes">
                 </div>
 
                 <!-- RIGHT CONTENT -->
@@ -103,7 +103,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 col-md-12 text-center text-lg-start mb-4 mb-lg-0">
-                    <img src="Img/Logo.png" width="250px" alt="Footer Logo">
+                    <img src="Logo.png" width="250px" alt="Footer Logo">
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
@@ -160,5 +160,6 @@
 
 
 </body>
+
 
 </html>
