--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="row w-100 align-items-center">
                 <div class="col-lg-3 col-md-4 col-6 order-1">
                     <a href="index.html">
-                    <img src="Img/Logo.png" width="80px" height="60px" alt="Logo">
+                    <img src="Logo.png" width="80px" height="60px" alt="Logo">
                     </a>
                 </div>
                 <div class="col-lg-9 col-md-8 order-3 order-md-2 d-flex justify-content-end align-items-center">
@@ -54,14 +54,14 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="Img/2.png" class="w-100" style="height: 500px; object-fit: cover; filter: brightness(0.7);">
+                    <img src="2.png" class="w-100" style="height: 500px; object-fit: cover; filter: brightness(0.7);">
                     <div class="carousel-caption">
                         <h2 class="promo-title">PROMOTION</h2>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                    <img src="Img/8.jpg" class="w-100" style="height: 500px; object-fit: cover; filter: brightness(0.7);">
+                    <img src="8.jpg" class="w-100" style="height: 500px; object-fit: cover; filter: brightness(0.7);">
                     <div class="carousel-caption">
                         <h2 class="promo-title">PROMOTION</h2>
                     </div>
@@ -82,13 +82,13 @@
     <div class="section2">
         <div class="row mt-5 mobile-scroll flex-nowrap overflow-auto">
             <div class="col-10 col-md-4">
-                <img src="Img/3.jpg" class="section-img">
+                <img src="3.jpg" class="section-img">
             </div>
             <div class="col-10 col-md-4">
-                <img src="Img/4.jpg" class="section-img">
+                <img src="4.jpg" class="section-img">
             </div>
             <div class="col-10 col-md-4">
-                <img src="Img/5.jpg" class="section-img">
+                <img src="5.jpg" class="section-img">
             </div>
         </div>
 
@@ -117,9 +117,9 @@
     <div class="section3">
         <div class="container">
             <div class="row">
-                <div class="col-md-6"><img src="Img/6.png" class="section-img img-fluid">
+                <div class="col-md-6"><img src="6.png" class="section-img img-fluid">
                 </div>
-                <div class="col-md-6"><img src="Img/7.png" class="section-img img-fluid">
+                <div class="col-md-6"><img src="7.png" class="section-img img-fluid">
                 </div>
             </div>
 
@@ -146,7 +146,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 col-md-12 text-center text-lg-start mb-4 mb-lg-0">
-                    <img src="Img/Logo.png" width="250px" alt="Footer Logo">
+                    <img src="Logo.png" width="250px" alt="Footer Logo">
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
@@ -185,5 +185,6 @@
         }
     </script>
 </body>
+
 
 </html>
