--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
             <div class="row w-100 align-items-center">
                 <div class="col-lg-3 col-md-4 col-6 order-1">
                     <a href="index.html">
-                    <img src="Img/Logo.png" width="80px" height="60px" alt="Logo">
+                    <img src="Logo.png" width="80px" height="60px" alt="Logo">
                     </a>
                 </div>
                 <div class="col-lg-9 col-md-8 order-3 order-md-2 d-flex justify-content-end align-items-center">
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 col-md-12 text-center text-lg-start mb-4 mb-lg-0">
-                    <img src="Img/Logo.png" width="250px" alt="Footer Logo">
+                    <img src="Logo.png" width="250px" alt="Footer Logo">
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
@@ -95,3 +95,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
