--- a/profile.html
+++ b/profile.html
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 col-md-12 text-center text-lg-start mb-4 mb-lg-0">
-                    <img src="Img/Logo.png" width="250px" alt="Footer Logo">
+                    <img src="Logo.png" width="250px" alt="Footer Logo">
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
@@ -132,3 +132,4 @@
 
 
 </html>
+
